# FreeRTOS

./: CMakeLists.txt  README.md  platformio.ini  test_rpc_protocol.cpp  test_utils.h  Недостатки.txt  Предложения по улучшению.txt
include/: rpc_application.h  rpc_data_link.h  rpc_physical.h  rpc_transport.h  rpc_types.h
src/: main.cpp  rpc_application.cpp  rpc_data_link.cpp  rpc_physical.cpp  rpc_transport.cpp
